--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -288,7 +288,7 @@
 <div class="container-flex">
 <div>
   <div class="contact-form-wrapper d-flex justify-content-center">
-    <form action="/" class="contact-form">
+    <form name="mailto:dikshatomar1511@gmail.com"  name="contact" data-netlify="true" class="contact-form">
       <h5 class="title">Get in touch</h5>
       <p class="description">Feel free to contact us if you need any assistance, any help or another question.
       </p>
