--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" user-scalable=no>
 <!-- favicon -->
 <link rel="shortcut icon" href="img/diksha.png" type="image/x-icon">
 
@@ -58,7 +58,7 @@
 
       <!-- HERO -->
       <section class="hero">
-        <h2 id="text"><span>Hi!</span> <br>Welcome</h2>
+        <h2 id="text"><span>Hi! Welcome</span><br> I'm Diksha<br></h2>
         <img src="img/bird1.png" alt="" id="bird1">
         <img src="img/bird2.png" alt="" id="bird2">
         <img src="img/forest.png" alt="" id="forest">
